# gcloud-cpp-starter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  fetch.cpp  fetch.hpp  index.html  main.cpx  server.hpp.in  style.css
src/server/: CMakeLists.txt  index.js  main.cpp
